# AI_Scholar

./: .dockerignore  .env  .env.example  .env.local  .env.production  .eslintrc.analysis.js  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .yamllint.yml  ADVANCED_AI_FEATURES.md  ADVANCED_ECOSYSTEM_IMPLEMENTATION_STATUS.md  ADVANCED_ENTERPRISE_FEATURES_GUIDE.md  ADVANCED_FEATURES_IMPLEMENTATION_SUMMARY.md  ADVANCED_INTERACTION_PARADIGMS.md  ADVANCED_RECOMMENDATIONS.md  AGENT_PERSONA_FEATURES.md  AI_MODEL_MASTERY_GUIDE.md  AI_SCHOLAR_FULL_FEATURE_INTEGRATION.md  AI_SCHOLAR_PROJECT_COMPLETE.md  AI_SCHOLAR_RAG_IMPLEMENTATION_PLAN.md  API_TESTING.md  AUTHENTICATION-FEATURES.md  AUTHENTICATION_ANALYTICS_FEATURES.md  CHAT_HISTORY_AND_USER_MANAGEMENT.md  CODE_QUALITY_SETUP.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SERVER_SETUP_GUIDE.md  COMPREHENSIVE_CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_PROJECT_IMPROVEMENT_RECOMMENDATIONS.md  CONTRIBUTING.md  CONVERSION-SUMMARY.md  CUSTOMIZATION_GUIDE.md  DATABASE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ORGANIZATION_PLAN.md  (+255 more)
backend/: .env.example  .flake8  .pylintrc  AI_SCHOLAR_USAGE.md  ARXIV_HISTORICAL_DOWNLOAD_GUIDE.md  Dockerfile  ENHANCED_INFRASTRUCTURE_SUMMARY.md  HISTORICAL_DOWNLOAD_SOLUTION.md  MONTHLY_CRONJOB_SETUP.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  TASK_10_2_COMPREHENSIVE_MONITORING_IMPLEMENTATION_SUMMARY.md  TASK_2_1_IMPLEMENTATION_SUMMARY.md  TASK_2_1_ZOTERO_OAUTH_CLIENT_IMPLEMENTATION_SUMMARY.md  TASK_2_2_IMPLEMENTATION_SUMMARY.md  TASK_2_2_VOICE_COMMAND_SYSTEM_SUMMARY.md  TASK_3_1_LIBRARY_IMPORT_IMPLEMENTATION_SUMMARY.md  TASK_3_2_INCREMENTAL_SYNC_IMPLEMENTATION_SUMMARY.md  TASK_3_3_COLLECTION_HIERARCHY_IMPLEMENTATION_SUMMARY.md  TASK_3_3_IMPLEMENTATION_SUMMARY.md  TASK_4_1_REFERENCE_STORAGE_IMPLEMENTATION_SUMMARY.md  TASK_4_3_BROWSE_FILTERING_IMPLEMENTATION_SUMMARY.md  TASK_4_3_IMPLEMENTATION_SUMMARY.md  TASK_4_MEMORY_SYSTEM_SUMMARY.md  TASK_5_1_CORE_CITATION_FORMATTING_ENGINE_SUMMARY.md  TASK_5_2_BIBLIOGRAPHY_EXPORT_IMPLEMENTATION_SUMMARY.md  TASK_5_2_IMPLEMENTATION_SUMMARY.md  TASK_5_3_CITATION_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  TASK_5_3_IMPLEMENTATION_SUMMARY.md  TASK_5_4_IMPLEMENTATION_SUMMARY.md  TASK_5_CITATION_SYSTEM_IMPLEMENTATION_SUMMARY.md  TASK_6_1_IMPLEMENTATION_SUMMARY.md  TASK_6_1_SERVICE_INITIALIZATION_ERROR_HANDLING_SUMMARY.md  TASK_6_2_ENDPOINT_ERROR_HANDLING_SUMMARY.md  TASK_6_2_IMPLEMENTATION_SUMMARY.md  TASK_6_2_SECURE_CODE_EXECUTION_IMPLEMENTATION_SUMMARY.md  TASK_6_2_SIMILARITY_RECOMMENDATION_IMPLEMENTATION_SUMMARY.md  TASK_6_3_IMPLEMENTATION_SUMMARY.md  TASK_6_3_INTERACTIVE_VISUALIZATION_IMPLEMENTATION_SUMMARY.md  TASK_6_3_RESEARCH_INSIGHTS_GAP_ANALYSIS_SUMMARY.md  (+331 more)
backend/agents/: research_agent.py
backend/analytics/: models.py  routes.py  service.py
backend/api/: academic_database_endpoints.py  advanced_endpoints.py  advanced_endpoints_broken.py  advanced_endpoints_full.py  advanced_endpoints_simple.py  advanced_reasoning_endpoints.py  ai_training_endpoints.py  analytics_endpoints.py  automation_endpoints.py  chat_endpoints.py  compliance_endpoints.py  developer_portal_endpoints.py  error_tracking_endpoints.py  funding_matcher_endpoints.py  gamification_endpoints.py  grant_application_endpoints.py  graphql_schema.py  institutional_role_management_endpoints.py  integration_auth_endpoints.py  interactive_content_version_control_endpoints.py  interactive_visualization_endpoints.py  jupyter_notebook_endpoints.py  knowledge_discovery_endpoints.py  learning_progress_endpoints.py  models_routes.py  monitoring_endpoints.py  multimodal_endpoints.py  note_taking_endpoints.py  papers_routes.py  personalization_endpoints.py  publication_venue_endpoints.py  quiz_endpoints.py  realtime_endpoints.py  reference_manager_endpoints.py  research_endpoints.py  research_memory_endpoints.py  resource_optimization_endpoints.py  scientific_rag_routes.py  secure_code_execution_endpoints.py  spaced_repetition_endpoints.py  (+30 more)
backend/arxiv_rag_enhancement/: README.md  __init__.py  requirements.txt
backend/auth/: database.py  dependencies.py  models.py  routes.py  security.py
backend/blockchain/: research_integrity.py
backend/core/: __init__.py  advanced_auth.py  advanced_research_models.py  circuit_breaker.py  conditional_importer.py  config.py  database.py  database_optimization.py  distributed_tracing.py  enhanced_caching.py  error_handler.py  exceptions.py  logging_config.py  redis_client.py  service_manager.py  test_config.py  unified_settings.py
backend/docs/: INTEGRATION_TESTING_GUIDE.md  ZOTERO_SECURITY_AUDIT_PROCEDURES.md  ZOTERO_SECURITY_GUIDELINES.md  ZOTERO_SECURITY_HARDENING_CHECKLIST.md
backend/middleware/: error_monitoring.py  integration_auth_middleware.py  performance_middleware.py  security_middleware.py  zotero_auth_middleware.py  zotero_security_middleware.py
backend/migrations/: 001_zotero_integration_foundation.sql  005_citation_management_tables.sql  006_zotero_export_sharing_tables.sql  007_zotero_annotation_sync_tables.sql  008_zotero_webhook_system.sql  009_zotero_group_library_support.sql  010_zotero_reference_sharing_system.sql  011_zotero_team_collaboration_tools.sql  upgrade_zotero_schema.py
backend/multi_instance_arxiv_system/: TASK_5_3_IMPLEMENTATION_SUMMARY.md  __init__.py  demo_reporting_system.py  demo_task_2_2_config_management.py  demo_task_2_3_reporting_models.py  demo_task_5_1_orchestrator.py  demo_task_5_3_reporting.py  demo_task_6_2_email_service.py  demo_task_6_3_notification_scheduler.py  demo_task_7_3_storage_alerting.py  demo_task_8_1_vector_store.py  demo_task_8_complete_vector_store.py  simple_task_5_3_test.py  test_ai_scholar_downloader.py  test_ai_scholar_error_integration.py  test_ai_scholar_processing.py  test_ai_scholar_simple.py  test_error_handling.py  test_error_handling_simple.py  test_infrastructure.py  test_journal_handlers.py  test_journal_handlers_simple.py  test_monthly_orchestrator_simple.py  test_orchestrator_basic.py  (+24 more)
(+1279 files in other folders)
